--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>Calculator</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <div class="container">
       <div class="above-screen">
         <!-- history -->
-        history
+        <img
+          src="./img/history.svg"
+          title="History"
+          alt="Clickable icon for history"
+        />
       </div>
 
       <div class="screen">0</div>
@@ -25,24 +30,24 @@
         <div class="key">Root</div>
         <div class="key">/</div>
 
-        <div class="key">7</div>
-        <div class="key">8</div>
-        <div class="key">9</div>
+        <div class="key number">7</div>
+        <div class="key number">8</div>
+        <div class="key number">9</div>
         <div class="key">x</div>
 
-        <div class="key">6</div>
-        <div class="key">5</div>
-        <div class="key">4</div>
+        <div class="key number">6</div>
+        <div class="key number">5</div>
+        <div class="key number">4</div>
         <div class="key">-</div>
 
-        <div class="key">1</div>
-        <div class="key">2</div>
-        <div class="key">3</div>
+        <div class="key number">1</div>
+        <div class="key number">2</div>
+        <div class="key number">3</div>
         <div class="key">+</div>
 
-        <div class="key">+/-</div>
-        <div class="key">0</div>
-        <div class="key">.</div>
+        <div class="key number">+/-</div>
+        <div class="key number">0</div>
+        <div class="key number">.</div>
         <div class="key">=</div>
       </div>
     </div>
