--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Calculator</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -9,8 +10,8 @@
   <body>
     <div class="container">
       <div class="above-screen">
-        <!-- history -->
         <img
+          class="history-button"
           src="./img/history.svg"
           title="History"
           alt="Clickable icon for history"
@@ -23,17 +24,24 @@
         <div class="key">%</div>
         <div class="key">CE</div>
         <div class="key">C</div>
-        <div class="key">Back</div>
+        <div class="key">
+          <svg style="width: 29px; height: 29px" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="M19,15.59L17.59,17L14,13.41L10.41,17L9,15.59L12.59,12L9,8.41L10.41,7L14,10.59L17.59,7L19,8.41L15.41,12L19,15.59M22,3A2,2 0 0,1 24,5V19A2,2 0 0,1 22,21H7C6.31,21 5.77,20.64 5.41,20.11L0,12L5.41,3.88C5.77,3.35 6.31,3 7,3H22M22,5H7L2.28,12L7,19H22V5Z"
+            />
+          </svg>
+        </div>
 
-        <div class="key">Reciprocal</div>
-        <div class="key">Square</div>
-        <div class="key">Root</div>
+        <div class="key"><sup>1</sup>⁄ x</div>
+        <div class="key">x<sup>2</sup></div>
+        <div class="key">&radic;x</div>
         <div class="key">/</div>
 
         <div class="key number">7</div>
         <div class="key number">8</div>
         <div class="key number">9</div>
-        <div class="key">x</div>
+        <div class="key">×</div>
 
         <div class="key number">6</div>
         <div class="key number">5</div>
@@ -45,7 +53,14 @@
         <div class="key number">3</div>
         <div class="key">+</div>
 
-        <div class="key number">+/-</div>
+        <div class="key number">
+          <svg style="width: 28px; height: 28px" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="M11,4V9H6V11H11V16H13V11H18V9H13V4H11M6,18V20H18V18H6Z"
+            />
+          </svg>
+        </div>
         <div class="key number">0</div>
         <div class="key number">.</div>
         <div class="key">=</div>
